<package>
  <name>behavior_mbf_state_machine</name>
  <version>1.0.0</version>
  <description>
     move base flex sm
  </description>
  <maintainer email="todo@todo.com">taehokang</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_mbf_state_machine</url>
  <author>taehokang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>mbf_flexbe_states</run_depend>

</package>